# python-ai-agent

./: README.md  main.py  pyproject.toml
config/: config.yaml
src/: agent.py  config.py  scheduler.py
src/templates/: cover_letter.jinja
src/utils/: logger.py
